--- a/src/pages/login.html
+++ b/src/pages/login.html
@@ -6,6 +6,7 @@
     <title>Iniciar sesión - Naturantioquia</title>
     <link rel="icon" type="image/png" href="/images/favicon.png">
     <link rel="stylesheet" href="/css/styles.css">
+    <script src="/js/login.js" defer></script>
     <!-- FontAwesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <style>
@@ -39,7 +40,7 @@
             <img src="https://i.imgur.com/35WVtfw.png" alt="Logo de la empresa" id="img-logo-login">
             <p>Ingresa a tu cuenta</p>
             <form id="login-form">
-                <input type="text" autocomplete="email" class="email" required name="username"
+                <input type="text" autocomplete="email" class="email" id="email" required name="username"
                     placeholder="Correo electrónico">
                 <input type="password" name="password" id="password" placeholder="Contraseña">
                 <button id="button_login">Iniciar sesión</button>
